2007-11-03  Peter Bloomfield

	* libbalsa/address-view.c:
	* src/sendmsg-window.c: simplify LibBalsaAddressView api.
	* src/main.c: (main): libbalsa_address_book_list has gone away.

2007-11-03  Peter Bloomfield

	* libbalsa/address-view.c: (libbalsa_address_view_finalize):
	do not leak GtkTreeRowReference;
	(lbav_append_addresses), (lbav_ensure_blank_line_idle_cb),
	(lbav_ensure_blank_line), (lbav_row_editing_cb),
	(libbalsa_address_view_new): remove debugging output.

2007-10-30  Peter Bloomfield

	* libbalsa/address-view.c:
	* libbalsa/address-view.h:
	* src/save-restore.c:
	* src/sendmsg-window.c:
	* src/sendmsg-window.h: use a separate widget for Reply-To.

2007-10-27  Peter Bloomfield

	* libbalsa/address-view.c: localize address types; check address
	types.

2007-10-26  Peter Bloomfield

	* libbalsa/address-view.c: (lbav_sort_func): make sort-func
	reflexive;
	(libbalsa_address_view_new): more debug info.

2007-10-26  Peter Bloomfield 

	* libbalsa/address-view.c: make blank line sort below addresses
	of the same type; try to have only one blank line.

2007-10-25  Peter Bloomfield

	* libbalsa/cell-renderer-button.c:
	* libbalsa/cell-renderer-button.h: forgot to add these for
	initial commit.

2007-10-25  Peter Bloomfield

	* libbalsa/Makefile.am:
	* libbalsa/address-entry.c:
	* libbalsa/address-entry.h:
	* libbalsa/address-view.c:
	* libbalsa/address-view.h:
	* src/ab-window.c:
	* src/main.c:
	* src/save-restore.c:
	* src/sendmsg-window.c:
	* src/sendmsg-window.h: initial commit on address-view branch.

2007-10-24  Albrecht Dreß

	* src/balsa-icons.c:
	* src/balsa-message.c:
	* src/balsa-print-object-text.c: More balsa Tangofication.

2007-10-23  Albrecht Dreß

	* configure.in:
	* libbalsa/Makefile.am:
	* libbalsa/address-book-rubrica.c:
	* libbalsa/address-book-rubrica.h:
	* libbalsa/libbalsa.c:
	* libbalsa/libbalsa.h:
	* src/ab-main.c:
	* src/ab-window.c:
	* src/address-book-config.c:
	* src/main.c: